# Teste-PicPay

./: pyproject.toml
notebook/query_1/: __init__.py  pokemon_alturas.py
notebook/query_2/: __init__.py  pokemons_evolution.py
notebook/query_3/: __init__.py  pokemon_ice_experience.py
notebook/query_4/: __init__.py  golpe_mais_aprendido.py
notebook/query_5/: __init__.py  query_pokemon_5.py
notebook/query_6/: __init__.py  pokemon_query6.py
